# db-perf

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run.py
db_perf/: migrator.py  perf.py
db_perf/db_versions/: base.py
db_perf/db_versions/v1/: __init__.py  client.py  queries.py
db_perf/db_versions/v2/: __init__.py  client.py  queries.py
db_perf/db_versions/v3/: __init__.py  client.py  queries.py
db_perf/db_versions/v4/: __init__.py  client.py  queries.py
db_perf/factories/: event.py
db_perf/models/: events.py  query.py
schemas/v2/migrations/: 001_new_relational_schema.sql
schemas/v3/migrations/: 0001_newmigration.sql
schemas/v4/migrations/: 001_new_relational_schema.sql
src/db_perf/: migrator.py  perf.py
src/db_perf/types/: events.py
